<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kea Zik</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="Noise">Noise Cancellation</string>
    <string name="activate">activate</string>
    <string name="deactivate">deactivate</string>
    <string name="concert">concert Hall</string>
    <string name="noise_cancel_on">Noise activé</string>
    <string name="noise_cancel_off">Noise désactivé</string>
    <string name="concert_hall_on">ConcertHall Activé</string>
    <string name="concert_hall_off">ConcertHall désactivé</string>

</resources>
