<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.borisdb.android.perruchezik.app.MainActivity">

    <TextView
        android:id="@+id/noiseTV"
        android:text="@string/Noise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/noiseCancellationToggleButton"
        android:textOff="@string/noise_cancel_off"
        android:textOn="@string/noise_cancel_on"
        android:layout_below="@id/noiseTV"
        />

    <TextView
        android:id="@+id/concertTV"
        android:text="@string/concert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/noiseCancellationToggleButton"
        />


    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/concertHallToggleButton"
        android:textOff="@string/concert_hall_off"
        android:textOn="Noise Activé."
        android:layout_below="@id/concertTV"
        />

</RelativeLayout>
